<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception_camera_driver</name>
  <version>0.0.0</version>
  <description>ROS2 driver for perception camera</description>
  <maintainer email="ms.kataoka@gmail.com">masaya</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>libzmqpp-dev</depend>
  <depend>protobuf-dev</depend>
  <depend>protobuf</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ouxt_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
